Updated login/signup template, everything is working except csrf_token sometimes returns an error, still need to check it out! And now trying to create the models in a efficient way for every student to have all the achievements and if they are completed or not

--- a/achievements/templates/achievements/login.html
+++ b/achievements/templates/achievements/login.html
@@ -1,9 +1,13 @@
 {% extends "achievements/base.html" %}
 
 {% block content %}
-<form method="POST" action="/login">
+<form method="POST" action="login">
     {% csrf_token %}
-    {{form}}
-    <button type="submit" name="login">Login</button>
+    {{form.as_p}}
+    {% if error %}
+        <p style="font-size:10px;color:red">{{error}}</p>
+    {% endif %}
+    <button type="submit" name="login">Log in</button>
 </form>
+<a href="{% url 'signup_user' %}" class="btn btn-primary">if you don't have an account, click here!</a>
 {% endblock %}
