--- a/achievements/templates/achievements/base.html
+++ b/achievements/templates/achievements/base.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The tool</title>
+    <title>My tool</title>
 </head>
 <body>
     <div id="content">
+        {% block nav_bar %}
+        {% endblock nav_bar %}
         {% block content %}
         {% endblock %}
     </div>
