--- a/achievements/templates/achievements/home.html
+++ b/achievements/templates/achievements/home.html
@@ -2,23 +2,26 @@
 
 {% block content %}
 <h1>Homepage</h1>
-<h2>Achievements for {{user.username}}</h2>
-{% if not achievement_list.empty %}
-    <h2>No achievement uploaded</h2>
-
+{% if not user.username %}
+    <a href="{% url 'login_user' %}" class="btn btn-primary">Login</a><br>
+    <a href="{% url 'signup_user' %}" class="btn btn-primary">Signup</a><br>
 {% else %}
-    <h2>size: {{achievement_list_size}}</h2>
-    <select name="achievemets">
-        {%for achievement in achievement_list %}
-            <option value="{{ achievement.achievement_name }}">{{achievement.achievement_name}}</option>
-        {% endfor %}
-    </select>
+    <h1>username {{user.username}}</h1>
+    <h2>Achievements for {{user.username}}</h2>
+    {% if achievement_list_size == 0 %}
+        <h2>No achievement uploaded</h2>
+    {% else %}
+        <select name="achievemets">
+            {%for achievement in achievement_list %}
+                <option value="{{ achievement.achievement_name }}">{{achievement.achievement_name}}</option>
+            {% endfor %}
+        </select>
+    {% endif %}
+    <form method="post" action="{% url 'logout_user' %}">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+    </form>
+
 {% endif %}
-
-<form method="post" action="{% url 'logout' %}">
-    {% csrf_token %}
-    <button type="submit">Logout</button>
-</form>
-
 
 {% endblock %}
